# prompt-injection-lab

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  README.ja.md  README.md
.github/workflows/: ci.yml
crates/pil-attacks/: Cargo.toml
crates/pil-attacks/src/: error.rs  lib.rs  provenance.rs  render.rs
crates/pil-bench-advbench/: Cargo.toml
crates/pil-bench-advbench/src/: lib.rs
crates/pil-bench-agentdojo/: Cargo.toml
crates/pil-bench-agentdojo/python/: enumerate_cases.py  run_case.py
crates/pil-bench-agentdojo/src/: lib.rs
crates/pil-bench-agentdojo/tests/: live.rs  parse.rs
crates/pil-bench-agentdojo/tests/fixtures/: agentdojo_result_error.json  agentdojo_result_security_false.json  agentdojo_result_security_true.json  enumeration.json
crates/pil-bench-harmbench/: Cargo.toml
crates/pil-bench-harmbench/src/: lib.rs
crates/pil-bench-jbb/: Cargo.toml
crates/pil-bench-jbb/src/: lib.rs
crates/pil-bench-strongreject/: Cargo.toml
crates/pil-bench-strongreject/src/: lib.rs
crates/pil-cli/: Cargo.toml
crates/pil-cli/src/: judges.rs  main.rs  repo.rs  suite.rs  timestamp.rs
crates/pil-cli/src/commands/: agentdojo.rs  mod.rs  reliability.rs  report.rs  run.rs  strongreject_concordance.rs  strongreject_judge.rs
crates/pil-core/: Cargo.toml
crates/pil-core/src/: attack.rs  case.rs  hashing.rs  instrument.rs  lib.rs  model.rs  source.rs  trial.rs  verdict.rs
crates/pil-llm/: Cargo.toml
crates/pil-llm/src/: cache.rs  config.rs  error.rs  lib.rs  mock.rs  provider.rs  version.rs
crates/pil-llm/src/backends/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/pil-llm/tests/: cache.rs  tools.rs
crates/pil-metrics/: Cargo.toml
crates/pil-metrics/python/: score_dist.py
crates/pil-metrics/scripts/: convert_copyright_hashes.py
crates/pil-metrics/src/: lib.rs  reliability.rs
crates/pil-metrics/src/aggregate/: bootstrap.rs  concordance.rs  interval.rs  mod.rs
crates/pil-metrics/src/instrument/: fine_tuned.rs  harmbench_cls.rs  minhash.rs  mod.rs  rubric.rs  string_match.rs
crates/pil-report/: Cargo.toml
crates/pil-report/src/: binarize.rs  cross_env.rs  duplicates.rs  judge_concordance.rs  lib.rs  present.rs  reliability_fmt.rs
crates/pil-report/tests/: design_3_4.rs
crates/pil-runner/: Cargo.toml
crates/pil-runner/src/: backoff.rs  checkpoint.rs  error.rs  lib.rs  rate_limit.rs  runner.rs
crates/pil-runner/tests/: runner.rs
crates/pil-shim/: Cargo.toml
crates/pil-shim/src/: lib.rs  mapping.rs  openai.rs  server.rs
crates/pil-shim/tests/: mapping.rs  server.rs
crates/pil-sidecar/: Cargo.toml
crates/pil-sidecar/src/: config.rs  launcher.rs  lib.rs
crates/pil-sidecar/tests/: funnel.rs
crates/pil-sidecar/tests/fixtures/: sidecar_stub.py
docs/: architecture.ja.md  architecture.md  design.ja.md  design.md  usage.ja.md  usage.md
suites/: phase1-full.toml  phase1-smoke.toml
thoughts/ledgers/: CONTINUITY_CLAUDE-prompt-injection-lab-phase2.md  CONTINUITY_CLAUDE-prompt-injection-lab.md
thoughts/plans/: phase2-plan.md
