[package]
name = "pil-bench-advbench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "prompt-injection-lab: AdvBench 原典ローダ (llm-attacks: goal,target)"

[dependencies]
pil-core.workspace = true
serde.workspace = true
csv.workspace = true
thiserror.workspace = true

[dev-dependencies]
