[package]
name = "pil-bench-harmbench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "prompt-injection-lab: HarmBench ローダ (可変スキーマ + copyright hash)"

[dependencies]
pil-core.workspace = true
serde.workspace = true
csv.workspace = true
thiserror.workspace = true

[dev-dependencies]
