[package]
name = "pil-bench-jbb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "prompt-injection-lab: JBB ローダ (harmful/benign/judge-comparison)"

[dependencies]
pil-core.workspace = true
serde.workspace = true
csv.workspace = true
thiserror.workspace = true

[dev-dependencies]
