[package]
name = "pil-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "prompt-injection-lab: CLI (reliability / run / report)"

[[bin]]
name = "pil"
path = "src/main.rs"

[features]
default = []
# LLM バックエンドを CLI から透過的に有効化する
ollama = ["pil-llm/ollama"]
openai = ["pil-llm/openai"]
anthropic = ["pil-llm/anthropic"]
gemini = ["pil-llm/gemini"]
# AgentDojo 1 ケースをシム経由でライブ実行する `agentdojo` サブコマンドを有効化する（P2-M4b）．
# 既定ビルドはこのサブコマンド・reqwest・axum・tokio::process を一切引き込まない（§6.1）．
agentdojo-live = [
    "openai",
    "pil-shim/shim",
    "pil-sidecar/sidecar",
    "pil-bench-agentdojo/agentdojo",
    "tokio/net",
]
# StrongREJECT fine-tuned judge を python sidecar 経由で回す `strongreject-judge` サブコマンドを
# 有効化する（P2-M5）．sidecar は std::process で直接起動するため tokio/process は不要で，
# 既定ビルド（network-free）はこのサブコマンドを一切引き込まない（§6.1）．
strongreject-judge = []

[dependencies]
pil-core.workspace = true
pil-llm.workspace = true
pil-metrics.workspace = true
pil-bench-advbench.workspace = true
pil-bench-harmbench.workspace = true
pil-bench-strongreject.workspace = true
pil-bench-jbb.workspace = true
pil-attacks.workspace = true
pil-runner.workspace = true
pil-report.workspace = true
# `agentdojo` サブコマンド（feature `agentdojo-live`）でのみ使う．既定ビルドではコンパイルしない．
pil-shim = { workspace = true, optional = true }
pil-sidecar = { workspace = true, optional = true }
pil-bench-agentdojo = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
