[package]
name = "pil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "prompt-injection-lab: 中核型定義 (SourceRef / Case / Verdict / Trial / InstrumentRef)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true

[dev-dependencies]
